--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" href="./images/favicon.png" type="image/png">
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
     integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles/styles.css">
-
+  <link rel="stylesheet" href="./styles/styles.css">
+  <meta name="description" content="Portfolio van Joran Floor - Software Developer met 5 jaar ervaring.">
+  <meta name="author" content="Joran Floor">
+  <meta property="og:title" content="Joran Floor Portfolio">
+  <meta property="og:image" content="./images/favicon.png">
   <title>Joran Floor</title>
 </head>
 
@@ -28,7 +32,7 @@
 
 
   <div class="BG">
-    <img class="BG-cover" src="/images/BG-cover.png" alt="BG-cover">
+    <img class="BG-cover" src="./images/BG-cover.png" alt="BG-cover">
   </div>
 
 
@@ -59,35 +63,86 @@
             <div class="card-body">
               <i class="fas fa-user-check fa-2x"></i>
               <h5 class="card-title">Joran Floor</h5>
-              <p class="card-text">ik ben geboren in 2004. ik doe de software development opleiding op Technova in Ede
-                waar ik focus op web development.</p>
+              <p class="card-text">Hi! ik ben joran een software developer met een passie voor het bouwen van
+                oplossingen vanuit mijn 5 jarige ervaring in het schrijven van software heb ik verschillende dingen
+                opgepakt en geleerd en die kennis wil ik delen.</p>
             </div>
           </div>
+
+          <div>
+            <img src="./images/1715156003325.jfif" alt="Joran Floor" class="profile-img">
+          </div>
+          
+
+
+
           <div id="cSlide1" class="card">
             <div class="card-body">
               <i class="fas fa-clock fa-2x"></i>
-              <h5 class="card-title">Mijn hobbys</h5>
-              <p class="card-text">In mijn vrije tijd probeer ik veel met vrienden om te gaan, ook ben ik vaak bezig met
-                van alles om geld te verdienen aandelen, sneaker resell, pokemon kaarten, ik heb ook een baantje bij
-                jumbo.</p>
+              <h5 class="card-title">Joran Information technology</h5>
+              <p class="card-text">Al mijn taken verricht ik onder de naam JIT</p>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="container ">
-            <h2>Wat kan ik</h2>
-            <div class="row">
-              <div class="col-sm">
-                <img id="icon1" class="icon" src="/images/HTML.png" alt="">
+          <div class="container">
+            <h2>Wat kan ik nu</h2>
+            <div class="row skills-row">
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon1" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML">
+                  <p class="skill-name">HTML</p>
+                </div>
               </div>
-              <div class="col-sm">
-                <img id="icon2" class="icon" src="/images/JS.png" alt="">
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon2" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS">
+                  <p class="skill-name">CSS</p>
+                </div>
               </div>
-              <div class="col-sm">
-                <img id="icon3" class="icon" src="/images/CSS.png" alt="">
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon3" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg"
+                    alt="JavaScript">
+                  <p class="skill-name">JavaScript</p>
+                </div>
               </div>
-              <div class="col-sm">
-                <img id="icon4"  class="icon" src="/images/PHP.png" alt="">
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon5" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" alt="Next.js">
+                  <p class="skill-name">Next.js</p>
+                </div>
+              </div>
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon6" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg"
+                    alt="Angular">
+                  <p class="skill-name">Angular</p>
+                </div>
+              </div>
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon7" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="SQL">
+                  <p class="skill-name">SQL</p>
+                </div>
+              </div>
+              <div class="col-sm-4 mb-4">
+                <div class="skill-item">
+                  <img id="icon8" class="icon"
+                    src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/dot-net/dot-net-original.svg" alt="ASP.NET">
+                  <p class="skill-name">ASP.NET</p>
+                </div>
+              </div>
+              <div class="col-sm-4 pt-5">
+                <div class="skill-item">
+                  <h1 class="skill-name">ETC...</h1>
+                </div>
               </div>
             </div>
           </div>
@@ -97,24 +152,88 @@
   </div>
 
   <div id="gotoProjects" class="projects">
-    <h1>Projecten</h1>
-    <br><br><br><br><br><br><br><br><br><br><br>
+    <div class="container py-5">
+      <h1 class="text-center mb-5">Projecten</h1>
+      <div class="row project-cards">
+        <!-- Project 1 -->
+        <div class="col-md-4 mb-4">
+          <div id="project1" class="card project-card">
+            <img src="./images/Screenshot 2025-04-16 192355.png" class="card-img-top" alt="Project 1">
+            <div class="card-body">
+              <h5 class="card-title">Sign up app</h5>
+              <p class="card-text">Een responsive website gebouwd met HTML, CSS en JavaScript.</p>
+            </div>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div class="col-md-4 mb-4">
+          <div id="project2" class="card project-card">
+            <img src="./images/project2.jpg" class="card-img-top" alt="Project 2">
+            <div class="card-body">
+              <h5 class="card-title">PHP Database Applicatie</h5>
+              <p class="card-text">Een database-gedreven webapplicatie met PHP en MySQL.</p>
+              <a href="#" class="btn btn-outline-light">Bekijk Project</a>
+            </div>
+          </div>
+        </div>
+        <!-- Project 3 -->
+        <div class="col-md-4 mb-4">
+          <div id="project3" class="card project-card">
+            <img src="./images/project3.jpg" class="card-img-top" alt="Project 3">
+            <div class="card-body">
+              <h5 class="card-title">JavaScript Game</h5>
+              <p class="card-text">Een interactieve game ontwikkeld met JavaScript en HTML Canvas.</p>
+              <a href="#" class="btn btn-outline-light">Bekijk Project</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="gotoContact" class="contact">
-    <h1>Neem contact op</h1>
+    <div class="container py-5">
+      <h1 class="text-center mb-5">Neem contact op</h1>
+      <div class="row justify-content-center">
+        <div class="col-md-8">
+          <div class="card contact-card">
+            <div class="card-body text-center">
+              <div class="contact-icons">
+                <div class="row mb-4">
+                  <div class="col-md-6 mb-4">
+                    <a href="mailto:joran.floor@gmail.com" class="contact-link">
+                      <i class="fas fa-envelope fa-3x mb-3"></i>
+                      <h5>Email</h5>
+                      <p>joranfloor@gmail.com</p>
+                    </a>
+                  </div>
+                  <div class="col-md-6 mb-4">
+                    <a href="https://www.linkedin.com/in/joran-floor-948866221/" target="_blank" class="contact-link">
+                      <i class="fab fa-linkedin fa-3x mb-3"></i>
+                      <h5>LinkedIn</h5>
+                      <p>linkedin.com/in/joranfloor</p>
+                    </a>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
-  <script src="/js/clicks.js"></script>
-  <script src="/js/AnimateHeader.js"></script>
-  <script src="/js/ScrollFunctions.js"></script>
+  <script src="./js/clicks.js"></script>
+  <script src="./js/AnimateHeader.js"></script>
+  <script src="./js/ScrollFunctions.js"></script>
 </body>
 
 </html>
